2011-12-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/agentes/status_monitor.php: Added sort funcionality
	and resize module value feature for string module data types.

	Pending task: #3425266

2011-12-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/help/en/help_custom_logo.php
	include/help/es/help_custom_logo.php: Changed height and width in 
	this help view.
	
	Fixes: #3450145

2011-12-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/setup/os.php: List all OS is the page by defect.
	
	Fixes: #3450147

2011-12-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/agent_conf_gis.php
      godmode/gis_maps/configure_gis_map.php: Changed order of latitude,
      longitude and altitude in Gis maps information.
      
      Fixes: #3450292

2011-12-02  Sergio Martin <sergio.martin@artica.es>

	* include/functions_modules.php
	include/functions.php
	extensions/snmp_explorer.php
	godmode/agentes/configurar_agente.php
	godmode/massive/massive_edit_modules.php: Check if a module 
	name exists in the agent when you edit the module and
	improve the errors feedback

2011-12-02  Sergio Martin <sergio.martin@artica.es>

	* include/functions_modules.php
	include/functions_api.php
	include/functions.php
	extensions/snmp_explorer.php
	godmode/agentes/module_manager_editor_common.php
	godmode/agentes/configurar_agente.php: limited the 
	modules creation to not allows to create one if exists
	a module with the same name in the agent to avoid
	recreate a module when go back in the browser.
	Bugfix: 3416129

2011-12-01 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* extensions/snmp_explorer.php: Removed trace.

2011-12-01 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* extensions/snmp_explorer.php: Fixed snmp over IE8.
	
	Fixes: #3441762

2011-12-01  Sergio Martin <sergio.martin@artica.es>

	* extensions/insert_data.php: Improved the error message to
	multiple xml creations (csv) bug: 3426375
