@@ -1,3 +1,11 @@
+2011-12-07 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+	* operation/events/events_list.php
+	operation/events/events.php: Added filter to hide/show alert events 
+	in this view.
+	
+	Pending task: #3406323
+
 2011-12-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
 	* operation/agentes/status_monitor.php: Added sort funcionality
